--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 
+streamlit>=1.28.0
 Flask==2.3.3
-pandas==2.0.3
+pandas>=2.1.0
 scikit-learn>=1.3.0
-numpy==1.24.3
+numpy>=1.26.0
 pickle-mixin==1.0.2
 gunicorn==21.2.0
+plotly>=5.15.0
+seaborn>=0.12.0
+matplotlib>=3.7.0
